--- a/src/ToDoItem.css
+++ b/src/ToDoItem.css
@@ -1,4 +1,91 @@
-.completed {
-	color: lightgrey;
-	text-decoration: line-through;
+.ToDo {
+	display: flex;
+	margin: 0 -3rem 4px;
+	padding: 1.1rem 3rem;
+	justify-content: space-between;
+	align-items: center;
+	background: rgba(255, 255, 255, 0.1);
+}
+
+.ToDo-task {
+	position: relative;
+	transition: opacity 0.4s linear;
+}
+
+.ToDo-task.completed {
+	opacity: 0.6;
+}
+
+.ToDo-task.completed:before {
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: -0.5rem;
+	display: block;
+	width: 0%;
+	height: 2px;
+	background: #fff;
+	animation: strikeitem 0.5s ease-out 0s forwards;
+}
+
+@keyframes strikeitem {
+	to {
+		width: calc(100% + 1rem);
+	}
+}
+
+.ToDo-buttons {
+	flex-shrink: 0;
+	padding-left: 0.7em;
+}
+
+.ToDo-buttons button {
+	border: none;
+	font-size: 1em;
+	margin: 0.4em;
+	background: none;
+	-webkit-appearance: none;
+	cursor: pointer;
+	color: #fff;
+}
+
+.ToDo-edit-form {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.ToDo-edit-form label {
+	min-width: 100%;
+	margin-bottom: 0.5rem;
+	font-size: 1.3rem;
+}
+
+.ToDo-edit-form input {
+	flex-grow: 1;
+	border: none;
+	background: #f7f1f1;
+	padding: 0 1.5em;
+	font-size: initial;
+}
+
+.ToDo-edit-form button {
+	padding: 0 1.3rem;
+	border: none;
+	background: #ff6666;
+	color: white;
+	text-transform: uppercase;
+	font-weight: bold;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	margin-left: 5px;
+	cursor: pointer;
+	transition: background 0.2s ease-out;
+}
+
+.ToDo-edit-form button:hover {
+	background: #ff5e5e;
+}
+.ToDo-edit-form input,
+.ToDo-edit-form button {
+	font-family: 'Quicksand', sans-serif;
+	height: 3rem;
 }
